--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <script src="js/vendor/html5shiv.js"></script>
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
+    <!--link magic.css-->
+    <link href="../dist/css/magic.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
