--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   </head>
   <body>
     <div class="container">
-        <h1>Hello, world!</h1>
+      <center>
+        <h1>Mr. Brandon T. Williams</h1>
+        <h2 class="text-disabled">Making your website a site to behold</h2>
+        <h2>info@brandontwilliams.info</h2>
+        <h2>(262) 422-6720</h2>
+      </center>
     </div>
     <!-- /.container -->
 
