--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <body>
     <div class="fullsize">
       <center>
+        <!--picture of me here-->
         <h1>Mr. Brandon T. Williams</h1>
         <h2 class="text-disabled">Making your website a site to behold</h2>
         <h2>info@brandontwilliams.info</h2>
