tried to add icon
Tried to add icon didn't work pushing code to keep error on file will
fix tonight if possible

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!--picture of me here-->
         <h1>Mr. Brandon T. Williams</h1>
         <h2 class="text-disabled">Making your website a site to behold</h2>
-        <h2>info@brandontwilliams.info</h2>
+        <i calss= "fa-envelope-o"></i><h2>info@brandontwilliams.info</h2>
         <h2>(262) 422-6720</h2>
         <h3>contact me:</h3>
         <form name="contactform" method="post" action="email.php">
