code for nav in place

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       <header>
         <h1>Brandon Williams</h1>
         <h4>Freelance Web Designer</h4>
+      </header>
+      <nav><ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="faq.html">FAQs</a></li>
+      </nav>
+      <main>
+      </main>
+      <footer>
+      </footer>
     </div>
   </body>
 <html>
