Started adding body text

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
       </header>
       <nav><ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
         <li><a href="faq.html">FAQs</a></li>
-      </nav>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="./contact">Contact Me</a></li>
+      </ul></nav>
       <main>
+        <h3>About Me</h3>
+        <p>I am a freelance web designer. I make it my job to ensure that your website is <strong>impactful</strong>, <strong>memorable</strong> and follows the <strong>best practices</strong> of World Wide Web Consortium. Which is a fancy way of saying, that I maintain a close attention to detail with you fully taking into account your personal vision and work with you every step of the way to fully ensure that your website is the best that it can be and a place that your clients will want to visit again and again.</p>
+
       </main>
       <footer>
+        <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
+        <h6>&copy; Brandon Williams 2018</h6>
       </footer>
     </div>
   </body>
