--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
-        <h6>&copy; Brandon Williams 2018</h6>
+        <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
       </footer>
     </div>
   </body>
