--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="faq.html">FAQs</a></li>
         <li><a href="#">Portfolio</a></li>
-        <li><a href="./contact">Contact Me</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
       </ul></nav>
       <main>
         <h3>About Me</h3>
@@ -30,6 +30,7 @@
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
+      </br>
         <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
       </footer>
     </div>
