Added table and other small changes
Added a services table and removed closing meta tag as I did not need it. I also added a field to the contact form.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       <script src="http://html5shim.google.com/svn/trunk/html5.js">
       </script>
       <![endif]-->
-      </meta>
   </head>
   <body>
     <div id="wrapper">
@@ -26,7 +25,25 @@
       <main>
         <h3>About Me</h3>
         <p>I am a freelance web designer. I make it my job to ensure that your website is <strong>impactful</strong>, <strong>memorable</strong> and follows the <strong>best practices</strong> of World Wide Web Consortium. Which is a fancy way of saying, that I maintain a close attention to detail with you fully taking into account your personal vision and work with you every step of the way to fully ensure that your website is the best that it can be and a place that your clients will want to visit again and again.</p>
-
+        <table>
+          <caption>Services I Provide</caption>
+          <tr>
+            <th>Service</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>Hard Code Websites:</td>
+            <td>asdf</td>
+          </tr>
+          <tr>
+            <td>WordPress Websites:</td>
+            <td>asdf</td>
+          </tr>
+          <tr>
+            <td>Website Updating</td>
+            <td>asdf</td>
+          </tr>
+        </table>
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
