--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
       <script src="http://html5shim.google.com/svn/trunk/html5.js">
       </script>
       <![endif]-->
-      </meta>
   </head>
   <body>
     <div id="wrapper">
@@ -20,7 +19,7 @@
       <nav><ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="faq.html">FAQs</a></li>
-        <!--<li><a href="#">Portfolio</a></li>-->
+        <li><a href="#">Portfolio</a></li>
         <li><a href="contact.html">Contact Me</a></li>
       </ul></nav>
       <main>
@@ -33,20 +32,27 @@
           <label>*Last Name:</label>
           <input type="text" name="lname" required placeholder="Doe">
           <br>
+          <label>Company</label>
+          <input type="text" name="company" placeholder="What company do you work for?">
+          <br>
           <label>*E-mail:</label>
           <input type="email" name="email" required placeholder="johndoe@gmail.com">
           <br>
           <label>*I Am Inquiring About:</label>
           <select name="inquirytype" required>
-            <option>Select the option that best applys to your inquiry</option>
+            <option>Select the option that best applies to your inquiry</option>
             <option value="build a hard codeded website">Having a website built</option>
             <option value="build a WordPress website">Having a WordPress site built</option>
             <option value="update existing website">Updating my existing website</option>
             <option value="other">Another reason</option>
           </select>
-
-
-
+          <br>
+          <label>Message And Or Description:
+          <textarea name="message" rows="4" cols="40" value="message" spellcheck="true" required placeholder="Please enter your message and or description here."></textarea>
+          <br>
+          <input type="submit" value="Send Message">
+          <input type="reset">
+        </form>
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
