Finished home page

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
           <label>*Last Name:</label>
           <input type="text" name="lname" required placeholder="Doe">
           <br>
-          <label>Company</label>
+          <label>Company:</label>
           <input type="text" name="company" placeholder="What company do you work for?">
           <br>
           <label>*E-mail:</label>
@@ -41,14 +41,14 @@
           <label>*I Am Inquiring About:</label>
           <select name="inquirytype" required>
             <option>Select the option that best applies to your inquiry</option>
-            <option value="build a hard codeded website">Having a website built</option>
+            <option value="build a hard codeded website">Having a website built (Hard Code)</option>
             <option value="build a WordPress website">Having a WordPress site built</option>
             <option value="update existing website">Updating my existing website</option>
             <option value="other">Another reason</option>
           </select>
           <br>
-          <label>Message And Or Description:
-          <textarea name="message" rows="4" cols="40" value="message" spellcheck="true" required placeholder="Please enter your message and or description here."></textarea>
+          <label>*Message And Or Description:
+          <textarea name="message" rows="4" cols="40" value="message" spellcheck="true" required placeholder="Please enter your message and or detailed description here."></textarea>
           <br>
           <input type="submit" value="Send Message">
           <input type="reset">
