--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul></nav>
       <main>
         <h3>About Me</h3>
-        <p>I am a freelance web designer. I make it my job to ensure that your website is <strong>impactful</strong>, <strong>memorable</strong> and follows the <strong>best practices</strong> of World Wide Web Consortium. Which is a fancy way of saying, that I maintain a close attention to detail with you fully taking into account your personal vision and work with you every step of the way to fully ensure that your website is the best that it can be and a place that your clients will want to visit again and again.</p>
+        <p>I am a freelance web designer. I make it my job to ensure that your website is <strong>impactful</strong>, <strong>memorable</strong> and follows the <strong>best practices</strong> of World Wide Web Consortium. Which is a fancy way of saying, that I maintain close attention to detail. I fully take into account your personal vision and work with you every step of the way to fully ensure that your website is the best that it can be and a place that your clients will want to visit again and again.</p>
         <table>
           <caption>Services I Provide</caption>
           <tr>
@@ -33,17 +33,21 @@
           </tr>
           <tr>
             <td>Hard Code Websites:</td>
-            <td>asdf</td>
+            <td>Your website is coded from the ground up to your personal specifications. This is the most versatile and customizable option.</td>
           </tr>
           <tr>
             <td>WordPress Websites:</td>
-            <td>asdf</td>
+            <td>Your website is built using the WordPress content management system. Producing a website with some customization restrictions.</td>
           </tr>
           <tr>
-            <td>Website Updating</td>
-            <td>asdf</td>
+            <td>Website Updating:</td>
+            <td>Submit a list of desired changes and or updates that you would like to have done to your current website and I’ll take care of the rest.</td>
           </tr>
         </table>
+        <h3>Have Questions?</h3>
+        <p>I'll be more than happy to answer them for you. Just head on over to the <a href="faq.html">FAQs</a> area and see if your answer is there. If it isn't, just <a href="contact.html">send me a message</a> and I will be happy to get back to you with an answer.</p>
+        <h3>Ready To Get Started?</h3>
+        <p>If you are ready to get started, head over to the <a href="contact.html">Contact Me</a> page to send me a detailed message and get a free quote.</p>
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
