added first lines of css and made some changes to aid the style sheet

--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,7 @@
       <script src="http://html5shim.google.com/svn/trunk/html5.js">
       </script>
       <![endif]-->
+      <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <div id="wrapper">
@@ -16,12 +17,12 @@
         <h1>Brandon Williams</h1>
         <h4>Freelance Web Designer</h4>
       </header>
-      <nav><ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="faq.html">FAQs</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
-      </ul></nav>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="faq.html">FAQs</a>
+        <a href="#">Portfolio</a>
+        <a href="contact.html">Contact Me</a>
+      </nav>
       <main>
         <h3>Frequently Asked Questions</h3>
         <dl>
@@ -37,8 +38,10 @@
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
-      </br>
-        <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
+        </br>
+        <div id="copyright">
+          <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
+        </div>
       </footer>
     </div>
   </body>
