--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Brandon Williams</title>
+    <!--mobile responce code-->
      <meta name="viewport"
       content="width=device-width,
       initial-scale=1.0">
@@ -9,6 +10,7 @@
       <script src="http://html5shim.google.com/svn/trunk/html5.js">
       </script>
       <![endif]-->
+      <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <div id="wrapper">
@@ -16,12 +18,12 @@
         <h1>Brandon Williams</h1>
         <h4>Freelance Web Designer</h4>
       </header>
-      <nav><ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="faq.html">FAQs</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
-      </ul></nav>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="faq.html">FAQs</a>
+        <a href="#">Portfolio</a>
+        <a href="contact.html">Contact Me</a>
+      </nav>
       <main>
         <h3>About Me</h3>
         <p>I am a freelance web designer. I make it my job to ensure that your website is <strong>impactful</strong>, <strong>memorable</strong> and follows the <strong>best practices</strong> of World Wide Web Consortium. Which is a fancy way of saying, that I maintain close attention to detail. I fully take into account your personal vision and work with you every step of the way to fully ensure that your website is the best that it can be and a place that your clients will want to visit again and again.</p>
@@ -51,9 +53,11 @@
       </main>
       <footer>
         <sub>Brandon Williams</br>Freelance Web Designer</br>E-mail: <a href="mailto:example@example.com?subject=Website Inquiry">example@example.com</a></sub>
-      </br>
-        <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
+        </br>
+        <div id="copyright">
+          <small><i>Copyright &copy; 2018 Brandon Williams</i></small>
+        </div>
       </footer>
     </div>
   </body>
-<html>
+</html>
