--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       </nav>
       <main>
         <h3>Contact Me</h3>
-        <p>Fill out this form to send me a business inquiry, or if you have any questions that were not answered on the <a href="faq.html">FAQs</a> page. All fields marked with and asterisk * are required.</p>
+        <p>Fill out this form to send me a business inquiry, or if you have any questions that were not answered on the <a href="faq.html">FAQs</a> page. <br> <b>All fields marked with an asterisk * are required.</b></p>
         <form name="contactform" method="post" action="/scripts/contact.php">
           <label>*First Name</label>
           <input type="text" name="fname" required placeholder="John" autofocus>
