added contact php file (work in progress)

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <main>
         <h3>Contact Me</h3>
         <p>Fill out this form to send me a business inquiry, or if you have any questions that were not answered on the <a href="faq.html">FAQs</a> page. <br> <b>All fields marked with an asterisk * are required.</b></p>
-        <form name="contactform" method="post" action="/scripts/contact.php">
+        <form name="contactform" id="contactform" method="post" action="./scripts/contactsubmit.php">
           <label>*First Name</label>
           <input type="text" name="fname" required placeholder="John" autofocus>
           <br>
