--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Brandon Williams</title>
 
   <!-- Custom fonts for this theme -->
-
+  <link href="https://fonts.googleapis.com/css?family=Karla|Rubik&display=swap" rel="stylesheet">
   <!-- Theme CSS -->
   <link href="assets/css/freelancer.css" rel="stylesheet">
 
@@ -275,7 +275,7 @@
               <br>
               <div id="success"></div>
               <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send <i class="far fa-paper-plane"></i></button>
               </div>
             </form>
           </div>
@@ -296,10 +296,10 @@
           <!-- Footer Social Icons -->
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">My Other Hangouts</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/brandon-t-williams1993">
               <i class="fab fa-fw fa-linkedin-in"></i>
             </a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <a class="btn btn-outline-light btn-social mx-1" href="https://www.github.com/brando5393">
               <i class="fab fa-github"></i>
             </a>
             <a class="btn btn-outline-light btn-social mx-1" href="#">
