added links to projects and made small CSS changes

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
               <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send <i class="far fa-paper-plane"></i></button>
               </div>
+              <p>In the event that the e-mail server fails to respond after multiple send attempts, please feel free to click <a href="mailto:brando5393@gmail.com?subject=Work%20Request"> here </a>to send me a message. (This will open up your default mail client.)</p>
             </form>
           </div>
         </div>
@@ -363,9 +364,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://brando5393.github.io/crystals-collector/" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -406,9 +406,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://brando5393.github.io/TriviaGame/" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -449,9 +448,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://brando5393.github.io/giftastic/" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -493,9 +491,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="http://brando5393.github.io/probability-simulator" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -536,9 +533,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://brando5393.github.io/JavaJamIWD" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -580,9 +576,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://github.com/brando5393/internet-service-checker" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
@@ -624,9 +619,8 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
+                  <button class="btn btn-primary" href="https://brando5393.github.io/project-1" data-dismiss="modal">
+                    Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button>
                 </div>
               </div>
