portfolio links now work

--- a/index.html
+++ b/index.html
@@ -275,9 +275,12 @@
               <br>
               <div id="success"></div>
               <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send <i class="far fa-paper-plane"></i></button>
+                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send <i
+                    class="far fa-paper-plane"></i></button>
               </div>
-              <p>In the event that the e-mail server fails to respond after multiple send attempts, please feel free to click <a href="mailto:brando5393@gmail.com?subject=Work%20Request"> here </a>to send me a message. (This will open up your default mail client.)</p>
+              <p>In the event that the e-mail server fails to respond after multiple send attempts, please feel free to
+                click <a href="mailto:brando5393@gmail.com?subject=Work%20Request"> here </a>to send me a message. (This
+                will open up your default mail client.)</p>
             </form>
           </div>
         </div>
@@ -364,9 +367,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://brando5393.github.io/crystals-collector/" data-dismiss="modal">
+                  <a href="https://brando5393.github.io/crystals-collector/"><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  </button></a>
                 </div>
               </div>
             </div>
@@ -406,9 +409,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://brando5393.github.io/TriviaGame/" data-dismiss="modal">
+                  <a href="https://brando5393.github.io/TriviaGame/"></a>><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  </button></a>
                 </div>
               </div>
             </div>
@@ -448,9 +451,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://brando5393.github.io/giftastic/" data-dismiss="modal">
+                  <a href="https://brando5393.github.io/giftastic/"><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  </button></a>
                 </div>
               </div>
             </div>
@@ -491,9 +494,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="http://brando5393.github.io/probability-simulator" data-dismiss="modal">
-                    Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  <a href="http://brando5393.github.io/probability-simulator"><button class="btn btn-primary">
+                      Open Project <i class="fas fa-arrow-circle-right"></i>
+                    </button></a>
                 </div>
               </div>
             </div>
@@ -533,9 +536,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://brando5393.github.io/JavaJamIWD" data-dismiss="modal">
-                    Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  <a href="https://brando5393.github.io/JavaJamIWD"><button class="btn btn-primary">
+                      Open Project <i class="fas fa-arrow-circle-right"></i>
+                    </button></a>
                 </div>
               </div>
             </div>
@@ -576,9 +579,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://github.com/brando5393/internet-service-checker" data-dismiss="modal">
-                    Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  <a href="https://github.com/brando5393/internet-service-checker"><button class="btn btn-primary">Open
+                      Project <i class="fas fa-arrow-circle-right"></i>
+                    </button></a>
                 </div>
               </div>
             </div>
@@ -619,9 +622,9 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <button class="btn btn-primary" href="https://brando5393.github.io/project-1" data-dismiss="modal">
-                    Open Project <i class="fas fa-arrow-circle-right"></i>
-                  </button>
+                  <a href="https://brando5393.github.io/project-1"><button class="btn btn-primary">
+                      Open Project <i class="fas fa-arrow-circle-right"></i>
+                    </button></a>
                 </div>
               </div>
             </div>
@@ -629,28 +632,28 @@
         </div>
       </div>
     </div>
-    </section>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="assets/js/jqBootstrapValidation.js"></script>
-    <script src="assets/js/contact_me.js"></script>
+  <!-- Contact Form JavaScript -->
+  <script src="assets/js/jqBootstrapValidation.js"></script>
+  <script src="assets/js/contact_me.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="assets/js/freelancer.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="assets/js/freelancer.min.js"></script>
 
-    <script type="text/javascript">
-      // This code gets and displays the current year in the copyright area
-      var date = new Date();
-      var currentYear = date.getFullYear();
-      $("#year-display").text(currentYear);
-    </script>
+  <script type="text/javascript">
+    // This code gets and displays the current year in the copyright area
+    var date = new Date();
+    var currentYear = date.getFullYear();
+    $("#year-display").text(currentYear);
+  </script>
 </body>
 
 </html>
