portfolio links now work

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     ipsam
                     nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
                     Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                  <a href="https://brando5393.github.io/TriviaGame/"></a>><button class="btn btn-primary">
+                  <a href="https://brando5393.github.io/TriviaGame/"><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button></a>
                 </div>
