project info added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <!-- change links around when ready -->
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
@@ -402,10 +401,7 @@
                   <!-- Portfolio Modal - Image -->
                   <img class="img-fluid rounded mb-5" src="assets/img/triviaGame.JPG" alt="trivia game preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">I had a great deal of fun creating this project. This Jurassic Park themed trivia game asks 10 questions related to the franchise, and gives the player a minute and a half to answer. Additionally, the game provides an ambient audio experience during game play.</p>
                   <a href="https://brando5393.github.io/TriviaGame/"><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button></a>
@@ -444,10 +440,7 @@
                   <!-- Portfolio Modal - Image -->
                   <img class="img-fluid rounded mb-5" src="assets/img/gifBoard.JPG" alt="gif board preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">Thanks for your interest in my Si-Fi Gif Board. You can have a lot of fun with this one, making use of the Giphy API, the board will display 10 gifs based on your search terms.</p>
                   <a href="https://brando5393.github.io/giftastic/"><button class="btn btn-primary">
                     Open Project <i class="fas fa-arrow-circle-right"></i>
                   </button></a>
@@ -487,10 +480,7 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/probabilitySim.JPG"
                     alt="probability simulator preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">Using JavaScript, the probability Simulator generates a random number until it reaches the number 2. Each iteration is printed to the screen.</p>
                   <a href="http://brando5393.github.io/probability-simulator"><button class="btn btn-primary">
                       Open Project <i class="fas fa-arrow-circle-right"></i>
                     </button></a>
@@ -529,10 +519,7 @@
                   <!-- Portfolio Modal - Image -->
                   <img class="img-fluid rounded mb-5" src="assets/img/javaJam.JPG" alt="javajam preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">This mock website for JavaJam Coffee House was coded from the ground up using HTML5 and CSS3.</p>
                   <a href="https://brando5393.github.io/JavaJamIWD"><button class="btn btn-primary">
                       Open Project <i class="fas fa-arrow-circle-right"></i>
                     </button></a>
@@ -572,10 +559,7 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/internetServiceChecker.JPG"
                     alt="internet service checker preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">A C# application that routinely checks the status of a given internet connection by sending ICMP packets to google. The application creates and writes the result of each check to a log file.</p>
                   <a href="https://github.com/brando5393/internet-service-checker"><button class="btn btn-primary">Open
                       Project <i class="fas fa-arrow-circle-right"></i>
                     </button></a>
@@ -615,10 +599,7 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/bookSleuth.JPG"
                     alt="internet service book sleuth preview">
                   <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda
-                    ipsam
-                    nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae?
-                    Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <p class="mb-5">The first major project in the UW Milwaukee coding boot camp, Book Sleuth is a user friendly application intended to allow users to discover new and interesting literature. I worked on this application with 3 other individuals, while also serving as project manager.</p>
                   <a href="https://brando5393.github.io/project-1"><button class="btn btn-primary">
                       Open Project <i class="fas fa-arrow-circle-right"></i>
                     </button></a>
