corrected bellow to below

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <!-- Payment Section Content -->
         <div class="row">
           <div class="col-lg-12 ">
-            <p class="lead">Need to make a payment? Click the button bellow to make a payment with PayPal. If you
+            <p class="lead">Need to make a payment? Click the button below to make a payment with PayPal. If you
               contracted me through UpWork please adhere to UpWork's payment policies. For any questions regarding
               payments, please see your invoice or contact me directly.</p>
             <h3 id="thank-you-text">Thank you for your business.</h3>
