made e-mail link have more contrast

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     class="far fa-paper-plane"></i></button>
               </div>
               <p>In the event that the e-mail server fails to respond after multiple send attempts, please feel free to
-                click <a href="mailto:brando5393@gmail.com?subject=Work%20Request"> here </a>to send me a message. (This
+                click <a href="mailto:brando5393@gmail.com?subject=Work%20Request" id="email-link"> here </a>to send me a message. (This
                 will open up your default mail client.)</p>
             </form>
           </div>
