--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -481,7 +481,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -522,7 +522,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -562,7 +562,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -603,7 +603,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -643,7 +643,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -685,7 +685,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star spinning-star"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -731,6 +731,9 @@
 
     // Code to animate heading
     $("#page-heading").addClass("animated zoomIn");
+
+    // Code to animate project stars
+    $(".spinning-star").addClass("animated infinite heartBeat");
   })
   </script>
 </body>
