--- a/index.html
+++ b/index.html
@@ -722,7 +722,19 @@
   <!-- Custom scripts for this template -->
   <script src="assets/js/freelancer.min.js"></script>
 
-  <script type="text/javascript">
+ 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158169726-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158169726-1');
+</script>
+
+ 
+ <script type="text/javascript">
   $(document).ready(function(){
     // This code gets and displays the current year in the copyright area
     var date = new Date();
